# QuickScriptTool

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  opensouce.txt
.cursor/rules/: edge-extension-packaging.mdc
.cursor/skills/module-selftest/: SKILL.md
.cursor/skills/scheduled-task-debug/: SKILL.md  reference.md
.cursor/skills/window-mode-debug/: SKILL.md  cdp-lessons.md  cdp-requirements.md  reference.md
DuiLib_Ultimate/: DuiLib.sln
DuiLib_Ultimate/Demos/duidemo/: DuiDemo.cpp  duidemo.vcxproj
DuiLib_Ultimate/DuiLib/: DuiLib.vcxproj
DuiLib_Ultimate/DuiLib/Control/: UIList.cpp  UIRichEdit.cpp
DuiLib_Ultimate/DuiLib/Core/: UIManager.cpp
docs/: comprehensive-test-cases.md  window-mode-design.md
extension/: PACKAGING.md
extension/edge/: README.txt  background.js  guide.html  manifest.json  offscreen.html  offscreen.js  options.html  options.js  popup.html  popup.js
installer/: QuickScriptTool.iss  README.md
resources/: QuickScriptTool.rc  resource.h  selftest_version.rc
scripts/: ai_action_diag.json  setup_opencv.ps1
src/: action_tree.h  action_utils.cpp  action_utils.h  agent_ai_actions.cpp  agent_ai_actions.h  agent_attachment.cpp  agent_attachment.h  agent_conversation_store.cpp  agent_conversation_store.h  agent_core.cpp  agent_core.h  agent_dialog.cpp  agent_dialog.h  agent_reference.cpp  agent_reference.h  agent_script_ops.cpp  agent_script_ops.h  agent_system_prompt.cpp  agent_system_prompt.h  agent_tools.cpp  agent_tools.h  agent_ui_notify.cpp  agent_ui_notify.h  ai_action_router.cpp  ai_action_router.h  ai_action_runtime.cpp  ai_action_runtime.h  ai_action_service.cpp  ai_action_service.h  app_branding.cpp  app_branding.h  app_settings.h  app_settings_store.cpp  app_settings_store.h  app_theme.cpp  app_theme.h  breakout_input.h  clicker.cpp  code_pattern_report.txt  config.h  (+97 more)
src/input/: mouse_input_backend.cpp  mouse_input_backend.h
src/window_mode/: background_uia_input.cpp  background_uia_input.h  background_window_input.cpp  background_window_input.h  com_apartment.cpp  com_apartment.h  hidden_desktop.cpp  hidden_desktop.h  macro_virtual_desktop.cpp  macro_virtual_desktop.h  virtual_desktop_accessor.cpp  virtual_desktop_accessor.h  window_capture.cpp  window_capture.h  window_capture_wgc.cpp  window_capture_wgc.h  window_coords.cpp  window_coords.h  window_mode_executor.cpp  window_mode_executor.h  window_mode_json.cpp  window_mode_json.h  window_mode_log.cpp  window_mode_log.h  window_mode_permission.cpp  window_mode_permission.h  window_mode_preview.cpp  window_mode_preview.h  window_mode_requirements.h  window_mode_session.cpp  window_mode_session.h  window_mode_types.cpp  window_mode_types.h  window_pick_dialog.cpp  window_pick_dialog.h  window_target.cpp  window_target.h
src/window_mode/cdp/: cdp_enable_dll.cpp  cdp_enable_injector.cpp  cdp_enable_injector.h  cdp_input.cpp  cdp_input.h
src/window_mode/ext_bridge/: ext_bridge_server.cpp  ext_bridge_server.h  ext_input.cpp  ext_input.h
src/window_mode/fake_focus/: build_fakefocus32.cmd  fake_focus_api.h  fake_focus_dll.cpp  fake_focus_hook.cpp  fake_focus_hook.h  fake_focus_injector.cpp  fake_focus_injector.h  fake_focus_soft_input.h  fake_focus_soft_input_host.cpp  fake_focus_soft_input_host.h
tools/: ai_action_router_selftest.cpp  app_settings_store_selftest.cpp  coord_space_selftest.cpp  download_python312.ps1  generate_app_icons.py  image_match_selftest.cpp  macro_variables_selftest.cpp  pack_edge_extension.ps1  package_release.ps1  paddle_ocr_helper.py  recorder_selftest.cpp  recorder_selftest_support.cpp  requirements-ocr.txt  scheduled_task_selftest.cpp  script_action_builder_selftest.cpp  script_io_selftest.cpp  selftest_harness.h  theme_ui_selftest.cpp  window_mode_diag.cpp  window_mode_selftest.cpp
